# lazycogs

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml  test.ipynb
.github/workflows/: benchmarks.yml  ci.yml  publish-pypi.yml
CONTRIBUTING/: index.html
api/: index.html
api/mosaic/: index.html
api/open/: index.html
api/utils/: index.html
architecture/: index.html
demo/: index.html
dev-docs/specs/: async-sync-boundary.md  auto-detect-dtype-nodata.md  flexible-temporal-grouping.md  rasterix-spatial-index.md  resampling-methods.md
docs/: demo.ipynb  index.md  performance.md
docs/api/: mosaic.md  open.md  utils.md
docs/guides/: chunking.md  cloud-storage.md  dtype-nodata.md  mosaic-methods.md  stac-search.md  temporal-grouping.md
docs/notebooks/: async-workflow.ipynb  demo_midwest_daily.ipynb  demo_southwest_monthly.ipynb  explain.ipynb  hls-analysis.ipynb  hls.ipynb  lazycogs-odc-stac.ipynb  quickstart.ipynb  rioxarray.ipynb
docs/stylesheets/: extra.css
guides/chunking/: index.html
guides/cloud-storage/: index.html
guides/dtype-nodata/: index.html
guides/mosaic-methods/: index.html
guides/stac-search/: index.html
guides/temporal-grouping/: index.html
hls/: index.html
lazycogs-odc-stac/: index.html
notebooks/async-workflow/: index.html
notebooks/cmr-lpcloud-fix-assets/: index.html
notebooks/demo_midwest_daily/: index.html
notebooks/demo_southwest_monthly/: index.html
notebooks/explain/: index.html
notebooks/hls/: index.html
notebooks/hls-analysis/: index.html
notebooks/hls-https/: index.html
notebooks/hls-s3/: index.html
notebooks/lazycogs-odc-stac/: index.html
notebooks/quickstart/: index.html
notebooks/rioxarray/: index.html
performance/: index.html
scripts/: format_benchmark_comparison.py  prepare_benchmark_data.py
search/: search_index.json
src/lazycogs/: __init__.py  _backend.py  _chunk_reader.py  _core.py  _cql2.py  _executor.py  _explain.py  _grid.py  _mosaic_methods.py  _native_grid.py  _reproject.py  _single.py  _storage_ext.py  _store.py  _temporal.py
tests/: conftest.py  integration_test.py  test_backend.py  test_chunk_reader.py  test_core.py  test_cql2.py  test_explain.py  test_grid.py  test_mosaic_methods.py  test_native_grid.py  test_rasterio_parity.py  test_reproject.py  test_rioxarray_interop.py  test_single.py  test_store.py  test_temporal.py
tests/benchmarks/: bench_duckdb_share.py  conftest.py  (+2 more)
