[project]
name = "lazycogs"
version = "0.1.1"
description = "Lazily load COG assets from STAC items into xarray DataArrays using async-geotiff"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Henry Rodman", email = "henry.rodman@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["COG", "STAC", "xarray", "geotiff", "raster", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "async-geotiff>=0.4.0",
    "cql2>=0.5.5",
    "numpy>=2.4.4",
    "obstore>=0.9.2",
    "pyproj>=3.7.2",
    "rustac[arrow]>=0.9.10",
    "xarray>=2026.2.0",
]

[project.optional-dependencies]
dask = [
    "dask>=2026.3.0",
]

[project.urls]
Repository = "https://github.com/developmentseed/lazycogs"
Documentation = "https://developmentseed.org/lazycogs"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lazycogs[dask]",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "rasterio>=1.5.0",
    "pre-commit>=4.6.0",
]
docs = [
    "mkdocs-jupyter>=0.26.2",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    "EM101",  # raw string in exception
    "EM102",  # f-string in exception
    "FIX002", # todo statements
    "PYI051", # literal strings redundant with str in type union
    "TD002",  # todo without author name
    "TRY003", # define exceptions in the exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",  # annotation in function argument
    "ANN201",  # return type annotation
    "PLR2004", # Magic value used in comparison
    "S101",    # assert
    "SLF001",  # private member access
    "D",       # docstring
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --benchmark-disable --ignore=tests/benchmarks"
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "benchmark: performance benchmarks (run with --benchmark-enable)",
]
